Updated 2 files via CloudCannon

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Kettle, Balancing Risk in a Changing Climate"
+title: 'Kettle, Balancing Risk in a Changing Climate'
 team_member:
   - name: Andrew Engler
     title: CEO
@@ -40,7 +40,8 @@ team_member:
   - name: Nigel Mortimer
     title: Executive Chairman and CUO
     bio_html: >-
-      <p>Nigel is a seasoned insurance executive having spent 30 years in the industry 
+      <p>Nigel is a seasoned insurance executive having spent 30 years in the
+      industry 
         primarily in London and Bermuda. As founder and President of Argo&rsquo;s Bermuda 
         insurance operations he has led the creation of many successful underwriting 
         platforms. Additional roles included EVP of Strategy and Business Development 
@@ -54,10 +55,26 @@ team_member:
     title: Lead Engineer
     bio_html: >-
       <p>Matt is a software engineer and data visualizer. He&rsquo;s helped make
-      the web for more than a decade, working on problems in fintech, retail and fashion strategy, 
-      and brand design. Most recently he was an engineering leader and contributor helping
-      bring new products to market at SurveyMonkey.</p>
+      the web for more than a decade, working on problems in fintech, retail and
+      fashion strategy,  and brand design. Most recently he was an engineering
+      leader and contributor helping bring new products to market at
+      SurveyMonkey.</p>
     image: /img/Images/team-headshot-matt.jpg
+  - name: Yaling Liu
+    title: Lead Data Scientist
+    bio_html: >-
+      <p>Yaling is a passionate scientist in Earth Science and Artificial
+      Intelligence. She has gained her Ph.D in Earth Science from Purdue
+      University and is expecting a M.S. degree in Computer Science from Georgia
+      Institute of Technology. She has been working on Computational Earth
+      System Modeling and Human-Earth Interactions for 10 years. Before joining
+      Kettle, Yaling was a Research Scientist at Columbia University and applied
+      Machine Learning in extreme climate events such as droughts and floods to
+      improve the understanding of the impacts of climate change and human
+      activities on the Earth System. At Kettle she brings her expertise in
+      Earth Science and Machine Learning to better predict and assess climate
+      change induced catastrophes.</p>
+    image: /uploads/yaling-liu.jpg
 ---
 
 <section id="intro-wrapper" class="pb-5 pb-md-auto">
@@ -75,22 +92,14 @@ team_member:
         </h2>
         <p class="my-3">Schedule a demo of our latest fire prediction model</p>
         <p>
-          <a class="btn" data-toggle="modal" data-target="#demoModal"
-            >Book a Demo</a
-          >
+          <a class="btn" data-toggle="modal" data-target="#demoModal">Book a Demo</a>
         </p>
       </div>
       <div class="col-12 col-md-6 pt-5 pt-md-0">
         <div class="project_mockup">
           <div class="iphone">
             <div class="iphone__inner">
-              <video
-                autoplay
-                loop
-                muted
-                playsinline
-                src="/video/kettle-animation.mp4"
-              ></video>
+              <video autoplay loop muted playsinline src="/video/kettle-animation.mp4"></video>
               <!-- <video autoplay loop muted src="/video/intro_gtpgsr.mp4"></video> -->
             </div>
           </div>
@@ -112,21 +121,15 @@ team_member:
     <div class="row centered">
       <div class="col-12 col-md-8">
         <h1 class="editable text-center">
-          <strong
-            >Insurers Can&rsquo;t Predict The Next Climate Crises, But We Are
-            Getting Close.</strong
-          >
+          <strong>Insurers Can&rsquo;t Predict The Next Climate Crises, But We Are
+            Getting Close.</strong>
         </h1>
       </div>
     </div>
     <div class="row centered align-items-baseline">
       <div class="col-12 col-md-4 editable text-center">
         <p>
-          <img
-            class="img-fluid my-3"
-            alt="Extreme temperatures"
-            src="/img/icons/kettle-icon-extreme-temps.svg"
-          />
+          <img class="img-fluid my-3" alt="Extreme temperatures" src="/img/icons/kettle-icon-extreme-temps.svg" />
         </p>
         <p>
           Wildfires, hurricanes and extreme temperatures are contributing to
@@ -135,11 +138,7 @@ team_member:
       </div>
       <div class="col-12 col-md-4 editable text-center">
         <p>
-          <img
-            class="img-fluid my-3"
-            alt="Underwriting Platform"
-            src="/img/icons/kettle-icon-underwriting-platform.svg"
-          />
+          <img class="img-fluid my-3" alt="Underwriting Platform" src="/img/icons/kettle-icon-underwriting-platform.svg" />
         </p>
         <p>
           We use deep learning to deliver better protections for people and more
@@ -148,11 +147,7 @@ team_member:
       </div>
       <div class="col-12 col-md-4 editable text-center">
         <p>
-          <img
-            class="img-fluid my-3"
-            alt="Transfer Risk"
-            src="/img/icons/kettle-icon-transfer-risk.svg"
-          />
+          <img class="img-fluid my-3" alt="Transfer Risk" src="/img/icons/kettle-icon-transfer-risk.svg" />
         </p>
         <p>
           Kettle analyzes, holds and transfers risk to buyers who want to
@@ -175,11 +170,7 @@ team_member:
         <div class="col-12 col-lg || stage-step animate fade-up" id="step-1">
           <div class="row centered my-3">
             <div class="col-3 col-lg-12 px-0 centered mb-lg-4">
-              <img
-                class="img-fluid"
-                alt="Step One"
-                src="/img/reinsurance/kettle-reinsurance-graphic-icon-customer.svg"
-              />
+              <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-customer.svg" />
             </div>
             <div class="col-9 col-lg-12">
               <div class="bg-gray px-3 py-2 wrapper">
@@ -195,11 +186,7 @@ team_member:
         <div class="col-12 col-lg || stage-step animate fade-up" id="step-2">
           <div class="row centered my-3">
             <div class="col-3 col-lg-12 px-0 centered mb-lg-5">
-              <img
-                class="img-fluid"
-                alt="Step One"
-                src="/img/reinsurance/kettle-reinsurance-graphic-icon-purchase.svg"
-              />
+              <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-purchase.svg" />
             </div>
             <div class="col-9 col-lg-12">
               <div class="ml-n5 pl-5">
@@ -214,11 +201,7 @@ team_member:
         <div class="col-12 col-lg || stage-step animate fade-up" id="step-3">
           <div class="row centered my-3">
             <div class="col-3 col-lg-12 px-0 centered mb-lg-5">
-              <img
-                class="img-fluid"
-                alt="Step One"
-                src="/img/reinsurance/kettle-reinsurance-graphic-icon-analyze.svg"
-              />
+              <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-analyze.svg" />
             </div>
             <div class="col-9 col-lg-12">
               <p class="small pl-3">
@@ -232,11 +215,7 @@ team_member:
         <div class="col-12 col-lg || stage-step animate fade-up" id="step-4">
           <div class="row centered my-3">
             <div class="col-3 col-lg-12 px-0 centered mb-lg-5">
-              <img
-                class="img-fluid"
-                alt="Step One"
-                src="/img/reinsurance/kettle-reinsurance-graphic-icon-pricing.svg"
-              />
+              <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-icon-pricing.svg" />
             </div>
             <div class="col-9 col-lg-12">
               <p class="small pl-3">
@@ -250,11 +229,7 @@ team_member:
         <div class="col-12 col-lg || stage-step animate fade-up" id="step-5">
           <div class="row centered align-items-start my-3">
             <div class="col-3 col-lg-12 px-0 centered mb-lg-4">
-              <img
-                class="img-fluid"
-                alt="Step One"
-                src="/img/reinsurance/kettle-reinsurance-graphic-transfer-risk.svg"
-              />
+              <img class="img-fluid" alt="Step One" src="/img/reinsurance/kettle-reinsurance-graphic-transfer-risk.svg" />
             </div>
             <div class="col-9 col-lg-12">
               <div class="bg-gray p-2">
@@ -295,31 +270,19 @@ team_member:
         <p class="small text-uppercase editable mb-0 text-white">
           Calculations per Run
         </p>
-        <img
-          class="img-fluid"
-          src="/img/icons/kettle-icon-technology-3-tridecillion.svg"
-          alt="Calculations"
-        />
+        <img class="img-fluid" src="/img/icons/kettle-icon-technology-3-tridecillion.svg" alt="Calculations" />
       </div>
       <div class="col-12 col-md-4 my-4">
         <h2 class="editable">42 Million</h2>
         <p class="small text-uppercase editable mb-0 text-white">Simulations</p>
-        <img
-          class="img-fluid"
-          src="/img/icons/kettle-icon-technology-simulations.svg"
-          alt="Simulations"
-        />
+        <img class="img-fluid" src="/img/icons/kettle-icon-technology-simulations.svg" alt="Simulations" />
       </div>
       <div class="col-12 col-md-4 my-4">
         <h2 class="editable">115,456</h2>
         <p class="small text-uppercase editable mb-0 text-white">
           Neural Network Nodes
         </p>
-        <img
-          class="img-fluid"
-          src="/img/icons/kettle-icon-technology-network-nodes.svg"
-          alt="Network Nodes"
-        />
+        <img class="img-fluid" src="/img/icons/kettle-icon-technology-network-nodes.svg" alt="Network Nodes" />
       </div>
     </div>
     <div class="row centered text-center mt-5">
@@ -347,15 +310,12 @@ team_member:
   </div>
 </section>
 
-<section
-  class="bg-black pt-0"
-  style="
+<section class="bg-black pt-0" style="
     background: url(/img/backgrounds/bg-curve.svg);
     background-size: 100% auto;
     background-position: center bottom;
     background-repeat: no-repeat;
-  "
->
+  ">
   <div class="container">
     <div class="row centered mb-5">
       <div class="col-12 col-lg-5 text-center text-lg-left">
@@ -365,25 +325,13 @@ team_member:
           clean, organize, and analyze real time data to calculate probabilities
           of fire damage at the 0.5 square mile across the state of California.
         </p>
-        <a
-          href=""
-          class="btn animated-border editable"
-          data-toggle="modal"
-          data-target="#demoModal"
-          >Learn more about our fire prediction model</a
-        >
+        <a href="" class="btn animated-border editable" data-toggle="modal" data-target="#demoModal">Learn more about our fire prediction model</a>
       </div>
       <div class="col-12 col-lg-7">
         <div class="project__mockup">
           <div class="tablet">
             <div class="tablet__inner">
-              <video
-                autoplay
-                loop
-                muted
-                playsinline
-                src="/video/intro_gtpgsr.mp4"
-              ></video>
+              <video autoplay loop muted playsinline src="/video/intro_gtpgsr.mp4"></video>
             </div>
           </div>
         </div>
@@ -414,15 +362,10 @@ team_member:
         <div class="row mb-5 h-lg-100 bg-white centered mx-3 mx-md-auto">
           <div class="col-12 col-lg-4 px-0 h-lg-100">
             <div class="team-photo h-100 w-100">
-              <div
-                class="h-lg-100"
-                style="background-image: url({{ member.image }});"
-              ></div>
+              <div class="h-lg-100" style="background-image: url({{ member.image }});"></div>
             </div>
           </div>
-          <div
-            class="col-12 col-lg-8 p-3 p-sm-5 team-bio h-lg-100 w-100 centered flex-column align-items-baseline animated-border"
-          >
+          <div class="col-12 col-lg-8 p-3 p-sm-5 team-bio h-lg-100 w-100 centered flex-column align-items-baseline animated-border">
             <p class="title">{{ member.title }}</p>
             <h2>{{ member.name }}</h2>
             {{ member.bio_html }}
@@ -431,19 +374,12 @@ team_member:
       </div>
       <div class="col-12 mb-5 d-none d-lg-flex">
         <div class="row mb-5 h-100 bg-white centered mx-3 mx-md-auto">
-          <div
-            class="col-12 col-lg-4 px-0 h-100 {% cycle 'order-lg-first','order-lg-last' %}"
-          >
+          <div class="col-12 col-lg-4 px-0 h-100 {% cycle 'order-lg-first','order-lg-last' %}">
             <div class="team-photo h-100 w-100">
-              <div
-                class="h-100"
-                style="background-image: url({{ member.image }});"
-              ></div>
+              <div class="h-100" style="background-image: url({{ member.image }});"></div>
             </div>
           </div>
-          <div
-            class="col-12 col-lg-8 p-3 p-sm-5 team-bio h-100 w-100 centered flex-column align-items-baseline animated-border"
-          >
+          <div class="col-12 col-lg-8 p-3 p-sm-5 team-bio h-100 w-100 centered flex-column align-items-baseline animated-border">
             <p class="title">{{ member.title }}</p>
             <h2>{{ member.name }}</h2>
             {{ member.bio_html }}
@@ -462,36 +398,18 @@ team_member:
         <h1 class="editable">
           Contact us to Schedule a Demo of our Fire Prediction Model
         </h1>
-        <a
-          href=""
-          class="btn mt-4 btn-orange"
-          data-toggle="modal"
-          data-target="#demoModal"
-          >Contact Us</a
-        >
+        <a href="" class="btn mt-4 btn-orange" data-toggle="modal" data-target="#demoModal">Contact Us</a>
       </div>
     </div>
   </div>
 </section>
 
 <!-- Modal -->
-<div
-  class="modal fade"
-  id="demoModal"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="demoModalLabel"
-  aria-hidden="true"
->
+<div class="modal fade" id="demoModal" tabindex="-1" role="dialog" aria-labelledby="demoModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true"></span>
         </button>
       </div>
